# Triangles_intersec

./: README.md  main.cpp
Unit_Test/: test_comp_tt.cpp  test_intsec.cpp  test_scalprod.cpp  test_sqrdist.cpp  test_vectprod.cpp
geom/: geom.cpp  geom.h
triangle/: CMakeLists.txt
triangle/Unit_Test/: CMakeLists.txt  test_comp_ps.cpp  test_comp_pt.cpp  test_comp_ss.cpp  test_comp_st.cpp  test_tr_segm.cpp
triangle/geom/: CMakeLists.txt  geom.cpp
triangle/headers/: geom.h
triangle/libraries/: geom.cpp
